syntax = "proto3";
package data_access;

service Database {
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    /* rpc GetPoints (GetPointsRequest) returns (GetPointsResponse); */
    /* rpc SetPoints (SetPointsRequest) returns (SetPointsResponse); */
    /* rpc AddPoints (AddPointsRequest) returns (AddPointsResponse); */
}

message AddUserRequest {
  string name = 1;
}

message AddUserResponse {
  int32 id = 1;
}

message GetUserRequest {
  string name = 1;
}

message GetUserResponse {
  string name = 2;
}

message GetPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
}

message GetPointsResponse {
  int32 points = 1;
}

message SetPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
  int32 points = 3;
}

message SetPointsResponse {}

message AddPointsRequest {
  string streamer_name = 1;
  string viewer_name = 2;
  int32 points = 3;
}

message AddPointsResponse {
  int32 points = 1;
}
